# test-float-parse

./: .gitignore  Cargo.toml  README.md  README.txt  runtests.py  rustfmt.toml
src/: lib.rs  main.rs  traits.rs  ui.rs  validate.rs
