[package]
name = "test-float-parse"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
resolver = "1"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
indicatif = { version = "0.17.8", default-features = false }
num = "0.4.3"
rand_chacha = "0.3"
rayon = "1"

[lib]
name = "test_float_parse"

[profile.release]
codegen-units = 1
lto = true

[profile.profiling]
inherits = "release"
debug = true
