[package]
name = "test-float-parse"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
resolver = "1"

[dependencies]
indicatif = { version = "0.17.8", default-features = false }
num = "0.4.3"
rand = "0.8.5"
rand_chacha = "0.3"
rayon = "1"

[lib]
name = "test_float_parse"

# Bigint libraries are slow without optimization, speed up testing
[profile.dev.package."*"]
opt-level = 3

# Squeeze out the last bit of available speed
[profile.release]
codegen-units = 1
lto = true

[profile.profiling]
inherits = "release"
debug = true
